manifests/apps/podinfo/app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo
  namespace: demo
  labels:
    app.kubernetes.io/name: podinfo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podinfo
      app.kubernetes.io/name: podinfo
  template:
    metadata:
      labels:
        app: podinfo
        app.kubernetes.io/name: podinfo
    spec:
      containers:
        - name: podinfo
          image: stefanprodan/podinfo:6.11.0
          command:
            - ./podinfo
          args:
            - --port=9898
            - --port-metrics=9797
          ports:
            - name: http
              containerPort: 9898
            - name: metrics
              containerPort: 9797
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9898
            initialDelaySeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /readyz
              port: 9898
            initialDelaySeconds: 5
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: demo
  labels:
    app.kubernetes.io/name: podinfo
spec:
  selector:
    app: podinfo
  ports:
    - name: http
      port: 9898
      targetPort: http
    - name: metrics
      port: 9797
      targetPort: metrics
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo
  namespace: demo
  annotations:
    gateway.envoyproxy.io/coraza-profile: strict
spec:
  parentRefs:
    - name: shared-gateway
      namespace: gateway-system
      sectionName: https
  hostnames:
    - "podinfo.klawu.com"
  rules:
    - backendRefs:
        - name: podinfo
          port: 9898
